changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

As per discussion on IRC, some changes to hopefully improve balance - will
await feedback:
common/living.c: Don't have the magic of an item affect wc.  Only if wc
     is explicitly set does it improve the character.
server/skills.c: Tweak lockpicking - give the skill level more relevence.
     Have difficulty increase exp gained.
MSW 2010-03-23
	
Fix EVENT_SAY for items in a container.
 server/monster.c
Nicolas Weeger 2010-03-22

Reformat and spellcheck all help texts and default rules/motd/news files.
Andreas Kirschbaum 2010-03-21

Add help for 'title' command.
Andreas Kirschbaum 2010-03-21

Send updated ground view when num_look_objects is received.
 socket/request.c
Nicolas Weeger 2010-03-20

Extract function to find player from socket.
 include/sproto.h
 server/player.c
 socket/request.c
Nicolas Weeger 2010-03-20

Don't send empty "stats " commands.
 socket/request.c
Nicolas Weeger 2010-03-20

Add extended statistics informations: race stats, natural stats.
This enables clients to display depletion and such.
 doc/Developers/protocol
 include/newserver.h player.h
 include/shared/newclient.h README
 socket/init.c request.c
Nicolas Weeger 2010-03-20

Fix crash with "cast" command having no arguments.
Andreas Kirschbaum 2010-03-19

Cache map information.
utils/cre/
 CREArchetypePanel.cpp
 CREArchetypePanel.h
 CREMainWindow.cpp
 CREMainWindow.h
 CREMapInformationManager.h
 CREMapInformationManager.cpp
 CREMapInformation.cpp
 CREMapInformation.h
 CREResourcesWindow.cpp
 CREResourcesWindow.h
 cre.pro
Nicolas Weeger 2010-03-17
